--- a/pages/Test_Services.html
+++ b/pages/Test_Services.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Services</title>
-    <script src="../Javascript/Services.js"></script>
+    <script src="../JavaScript/http_response.js"></script>
     <style>
         body{
             margin: auto;
@@ -33,7 +33,7 @@
     <div id="post"></div>
     <script>
         const getElement = document.querySelector("#get");
-        const getURL = "http://localhost:3000/employees/1";
+        const getURL = "http://localhost:3000/EmployeePayrollDB/1";
         makePromiseCall("GET", getURL, true)
             .then(responseText => {
                 getElement.textContent = "Get User Data :" + responseText;
@@ -43,7 +43,7 @@
             });
 
         const deleteElement = document.querySelector("#delete");
-        const deleteURL = "http://localhost:3000/employees/6";
+        const deleteURL = "http://localhost:3000/EmployeePayrollDB/3";
         makePromiseCall("DELETE", deleteURL, false)
             .then(responseText => {
                 deleteElement.textContent = "Delete User Data :" + responseText;
@@ -53,7 +53,7 @@
             });
 
         const postElement = document.querySelector("#post");
-        const postURL = "http://localhost:3000/employees/";
+        const postURL = "http://localhost:3000/EmployeePayrollDB/";
         const EmpData = { "name": "Mayuresh", "salary": "25000" };
         makePromiseCall("POST", postURL, true, EmpData)
             .then(responseText => {
